Enable the sauce labs add-on

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ node_js:
   - "0.11"
   - "0.10"
 
+addons:
+  sauce_connect:
+    username: debona
+    access_key: 11c69253-485f-4dae-bcbb-169c01fc9b17
+
 before_script:
   - git submodule sync
   - git submodule update --init --recursive
