--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,9 @@ node_js:
 
 before_script:
   - ./go dev
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - sleep 5
+  - test -f /tmp/selenium.jar || curl "https://selenium.googlecode.com/files/selenium-server-standalone-2.35.0.jar" > /tmp/selenium.jar
+  - java -jar /tmp/selenium.jar &> /tmp/selenium.log &
+  - sleep 20
