--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,4 @@ before_script:
   - test -f /tmp/selenium.jar || curl "https://selenium.googlecode.com/files/selenium-server-standalone-2.35.0.jar" > /tmp/selenium.jar
   - java -jar /tmp/selenium.jar &> /tmp/selenium.log &
   - sleep 20
+  - cat /tmp/selenium.log
