--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - sleep 5
-  - test -f /tmp/selenium.jar || curl "https://selenium.googlecode.com/files/selenium-server-standalone-2.35.0.jar" > /tmp/selenium.jar
+  - curl "https://selenium.googlecode.com/files/selenium-server-standalone-2.38.0.jar" > /tmp/selenium.jar
   - java -jar /tmp/selenium.jar -host 127.0.0.1 &> /tmp/selenium.log &
   - sleep 20
   - cat /tmp/selenium.log
